# flat_hash

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  CMakePresets.json  README.rst  gcovr.cfg  vcpkg.json
.github/: ci-presets.json
.github/workflows/: clang.yml  gcc.yml  linux.yml  macos.yml  msvc.yml  windows.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  flat_hashConfig.cmake.in  flat_hashMacros.cmake  msvc-env-helper.cmake  utils.cmake  vcpkg.cmake
cmake/ports/catch2/: fix-install-path.patch  portfile.cmake  vcpkg.json
cmake/ports/fmt/: portfile.cmake  vcpkg.json
include/flat_hash/: container_traits.hpp  dictionary.hpp  dictionary_fwd.hpp  dictionary_traits.hpp  flat_hash.hpp  probing_policy.hpp  set.hpp  set_fwd.hpp  set_traits.hpp  stl_compat.hpp
include/flat_hash/detail/: bits.hpp  config.hpp  containers.hpp  equal_to.hpp  format.hpp  hash_container_base.hpp  hash_container_base_fwd.hpp  hash_table.hpp  inline_vector.hpp  iterator_facade.hpp  macros.hpp  probing_policy.hpp  transparent_hash.hpp
include/flat_hash/detail/containers/: allocators.hpp  append.hpp  assign.hpp  capacity.hpp  clear.hpp  concepts.hpp  construct.hpp  container_traits.hpp  emplace_back.hpp  erase.hpp  extract.hpp  get_allocator.hpp  insert.hpp  policy.hpp  pop.hpp  remove.hpp  reserve.hpp  resize.hpp  stl_container_traits.hpp  utility.hpp
tests/: CMakeLists.txt
tests/src/: container_testing.hpp  detail_tests.cpp  dictionary_tests.cpp  hashed_tests.hpp  set_tests.cpp  testing.hpp
tools/: flat_hash.natvis  flat_hash_gdb.py  format.py  utils.py
